Fix z-index for batch uploads

--- a/app/webpacker/src/stylesheets/metronic/css/custom.scss
+++ b/app/webpacker/src/stylesheets/metronic/css/custom.scss
@@ -1,5 +1,5 @@
 .selectize-dropdown {
-  z-index: 1001 !important;
+  z-index: 1005 !important;
 }
 
 .carousel-indicators,
